# Web3DevLearn

./: .gitignore  README.md  pyproject.toml
web3_py_simple_storage/: deploy.py  template-config.json  template.env
